Fix alignment of bar detail elements and remove list-group-item border

--- a/public/scss/_search.scss
+++ b/public/scss/_search.scss
@@ -1,7 +1,16 @@
 #search-button {
-  // width: 80%;
-  // display: inline;
-  // margin-right: 1em;
-  // border-color: white;
   border: 1px solid #337ab7;
+}
+
+.leftDiv {
+  float: left;
+  margin-right: 1em;
+}
+
+.rightDiv {
+  // float: right;
+}
+
+.barName {
+  margin-right: 1em;
 }
